
[metadata]
name = lkf_tools
description = this package allows to detect and track deformation features (LKFs) in sea-ice deformation data
author = Nils Hutter
author_email = nhutter@uw.edu
url = https://github.com/nhutter/lkf_tools
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha #5 - Production/Stable 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)


[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

install_requires =
    numpy
    requests
    numpy 
    matplotlib
    scipy
    netCDF4
    datetime
    scikit-image
    pyproj
    cartopy
setup_requires= 
    setuptools_scm
python_requires = >=3.6

[options.package_data]
* = README.md

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = lkf_tools/_version.py
